# identity-service

./: .gitignore  sample.txt
.github/workflows/: build-push.yml  build_push_processor.yml  test-build-push.yml
cognito-gateway-app/: README.md
cognito-gateway-app/db-cognito/: Cargo.toml
cognito-gateway-app/db-cognito/src/: lib.rs  main.rs
cognito-gateway-app/db-cognito/tests/: integration_test.rs
data/: db.sql
identity-app/: .gitignore  Cargo.toml
identity-app/controller/: Cargo.toml
identity-app/controller/src/: lib.rs
identity-app/controller/src/openapi/: identity_user.rs  mod.rs  test1.rs
identity-app/db-cognito/: Cargo.toml
identity-app/db-cognito/src/: lib.rs
identity-app/db-postgres/: .env.test  Cargo.toml
identity-app/db-postgres/migrations/: V1__initial.sql  V2__PFM1.sql  V3__add_user_table.sql
identity-app/db-postgres/src/: config.rs  lib.rs  migration.rs
identity-app/db-postgres/src/test1_gateway/: mod.rs  query.rs
identity-app/db-postgres/src/user_gateway/: mod.rs  mutation.rs  query.rs
identity-app/db-postgres/tests/: integration_test.rs  user_test.rs
identity-app/db-postgres/tests/common/: embedded.rs
identity-app/domain/: Cargo.toml
identity-app/domain/src/: boundaries.rs  lib.rs
identity-app/domain/src/entity/: mod.rs  test1.rs  user.rs
identity-app/domain/src/interactors/: mod.rs  test1_mutation.rs  test1_query.rs  user_mutation.rs  user_query.rs
identity-app/iam-cognito/: Cargo.toml
identity-app/presenter/: Cargo.toml
identity-app/presenter/src/: lib.rs
identity-dynamodb-lambda/: Cargo.toml
identity-dynamodb-lambda/terraform/: dynamodb-functions.tf  terraform.auto.tfvars
identity-dynamodb-lambda/user-table/: .gitignore  Cargo.toml
identity-dynamodb-lambda/user-table/src/: lib.rs  main.rs
identity-dynamodb-lambda/user-table/tests/: integration_test.rs
identity-lambda/: .gitignore  Cargo.toml
identity-lambda/terraform/: data.tf  example-service.tf  query-test1.tf  service-functions.tf  service-root-function.tf  terraform.auto.tfvars  variables.tf
identity-lambda/test1/: Cargo.toml
identity-lambda/test1/src/: README.md  main.rs
identity-lambda/test2/: Cargo.toml
identity-lambda/test2/src/: main.rs
identity-lambda/user/: .env.test  Cargo.toml
identity-lambda/user/src/: lib.rs  main.rs  user_lambda_test.rs
identity-lambda/user/test/: user_lambda_test.rs
identity-lambda/user/tests/: integration_test.rs
identity-lambda/user_deactivate/: Cargo.toml
identity-lambda/user_deactivate/src/: lib.rs
identity-lambda/user_deactivate/tests/: integration_test.rs
identity-lambda/user_deactivation/: Cargo.toml
identity-lambda/user_deactivation/src/: lib.rs  main.rs
identity-lambda/user_deactivation/tests/: integration_test.rs
lambda/: Cargo.toml  package-lock.json  serverless.yml
lambda/cognito/: Cargo.toml
lambda/cognito/src/: README.md  main.rs
lambda/postgres/: Cargo.toml
lambda/postgres/src/: main.rs
lambda/terraform/: providers.tf  query-test2.tf  variables.tf
lambda/test1/: Cargo.toml
lambda/test2/: Cargo.toml
scripts/: ci_build.sh
