[package]
name = "db-cognito"
version = "0.1.5"
edition = "2018"

[dependencies]
chrono = "0.4.19"
#domain = { path = "../../cognito-gateway-app/domain" }
tokio = { version = "1.6.0", features = ["full"] }
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_cognito_idp = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_credential = { version = "0.43.0" }
serde_dynamodb = { version = "0.9.0"}
serde_json = "1.0"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
hvcg_iam_openapi_identity = "0.1.3"
domain = {path = "../../identity-app/domain"}
regex = "1.3.1"
lambda_http = "0.3.0"
uuid = {version = "0.8", features = ["v4"]}
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
#dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.12-alpha", package = "aws-sdk-dynamodb" }
dotenv = "0.15.0"