[package]
name = "controller"
version = "0.1.5"
edition = "2018"

[dependencies]
domain = { path = "../domain" }
tokio-postgres = "0.7.2"
db-postgres = { path = "../../identity-app/db-postgres" }
hvcg_iam_openapi_identity = "0.0.9"
tokio = { version = "1.6.0", features = ["full"] }
uuid = {version = "0.8", features = ["v4"]}