[package]
name = "db-postgres"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio-postgres = "0.7.2"
tokio = { version = "1.6.0", features = ["full"] }
domain = { path = "../domain" }
refinery = { version = "0.5", features = ["tokio-postgres"] }
pg-embed = { version = "0.3" }
dotenv = "0.15.0"
async-trait = "0.1.50"
