[package]
name = "db-postgres"
version = "0.1.5"
edition = "2018"
publish = ["artifactory"]

[dependencies]
tokio-postgres = "0.7.2"
tokio = { version = "1.6.0", features = ["full"] }
domain = { path = "../domain", version = "0.1.0" }
#refinery = { version = "0.5", features = ["tokio-postgres"] }
#pg-embed = { version = "0.3" }
async-trait = "0.1.50"

[dev-dependencies]
dotenv = "0.15.0"
uuid = "0.5"