[package]
name = "iam-cognito"
version = "0.1.5"
edition = "2018"

[dependencies]
chrono = "0.4.19"
domain = { path = "../domain" }
tokio = { version = "1.6.0", features = ["full"] }
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_cognito_idp = { version = "0.42.0", default_features = false, features = ["rustls"] }