[package]
name = "user-table"
version = "0.1.5"
edition = "2018"

[dependencies]
chrono = "0.4.19"
tokio = { version = "1.6.0", features = ["full"] }
serde_json = "1.0"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.3.1"
lambda_http = "0.3.0"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }