[package]
name = "test1"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros"] }
#lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lambda_http = "0.3.0"
serde_json = "1.0"
hvcg_example_openapi_entity = "1.0"
controller = { path = "../../identity-app/controller" }
dotenv = "0.15.0"
