[package]
name = "user_deactivate"
version = "0.1.0"
authors = ["nhuthm080280 <nhuthm080280@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
#lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
lambda_http = "0.3.0"
# serde_json is just for the example, not required in general
serde_json = "1.0"
controller = { path = "../../identity-app/controller" }
db-cognito = { path = "../../cognito-gateway-app/db-cognito"}
jsonwebtoken = "7.2.0"
hvcg_example_openapi_entity = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "0.8", features = ["v4"]}
hvcg_iam_openapi_identity = "0.0.4"
dotenv = "0.15.0"
domain = {path = "../../identity-app/domain"}
regex = "1.3.1"
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_cognito_idp = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_credential = { version = "0.43.0" }
serde_dynamodb = { version = "0.9.0"}
tokio-postgres = {version = "0.7.2", features = ["with-uuid-0_8"]}
db-postgres = { path = "../../identity-app/db-postgres" }