[package]
name = "cognito"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
serde_json = "1.0"
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_cognito_idp = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_credential = { version = "0.42.0" }
